@@ -12,7 +12,7 @@ import org.leavesmc.leaves.command.CommandArgumentType;
 import org.leavesmc.leaves.entity.bot.actions.CraftUseItemAction;
 import org.leavesmc.leaves.event.bot.BotActionStopEvent;
 
-import java.util.Collections;
+import java.util.List;
 
 public class ServerUseItemAction extends ServerTimerBotAction<ServerUseItemAction> {
     private int useTick = -1;
@@ -20,7 +20,7 @@ public class ServerUseItemAction extends ServerTimerBotAction<ServerUseItemActio
 
     public ServerUseItemAction() {
         super("use", CommandArgument.of(CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER), ServerUseItemAction::new);
-        this.setSuggestion(3, Pair.of(Collections.singletonList("-1"), "[UseTick]"));
+        this.setSuggestion(3, Pair.of(List.of("-1"), "[UseTick]"));
     }
 
     @Override
