@@ -14,7 +14,7 @@ import org.leavesmc.leaves.command.CommandArgumentType;
 import org.leavesmc.leaves.entity.bot.actions.CraftUseItemToOffhandAction;
 import org.leavesmc.leaves.event.bot.BotActionStopEvent;
 
-import java.util.Collections;
+import java.util.List;
 
 public class ServerUseItemToOffhandAction extends ServerTimerBotAction<ServerUseItemToOffhandAction> {
     private int useTick = -1;
@@ -22,7 +22,7 @@ public class ServerUseItemToOffhandAction extends ServerTimerBotAction<ServerUse
 
     public ServerUseItemToOffhandAction() {
         super("use_to_offhand", CommandArgument.of(CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER, CommandArgumentType.INTEGER), ServerUseItemToOffhandAction::new);
-        this.setSuggestion(3, Pair.of(Collections.singletonList("-1"), "[UseTick]"));
+        this.setSuggestion(3, Pair.of(List.of("-1"), "[UseTick]"));
     }
 
     @Override
